--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Products Showroom Template</title>
+        <meta name="description" content="This is a collaboration with 'Los Feos Studio'; a solution for small business who wants to promote their products online with an affordable but professional approach. The template is fully customizable in order to be flexible for all kind of industries.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- PLACE ORIGINAL FACEBOOK META TAGS -->
@@ -14,7 +14,7 @@
             <meta property="og:title" content="PLACE_YOUR_TITLE" />
             <meta property="og:site_name" content="PLACE_YOUR_SITE_NAME"/>
             <meta property="og:url" content="PLACE_YOUR_OFFICIAL_URL" />
-            <meta property="og:description" content="PLACE_YOUR_DESCRIPTION" />
+            <meta property="og:description" content="This is a collaboration with 'Los Feos Studio'; a solution for small business who wants to promote their products online with an affordable but professional approach. The template is fully customizable in order to be flexible for all kind of industries." />
 
             <!-- PLACE WHAT KIND OF APP THIS IS -->
             <meta property="og:type" content="website" />
@@ -23,7 +23,7 @@
             <meta property="og:locale" content="es_MX" />
 
             <!-- PLACE AN IMAGE FOR_THE SHARE GRAPH -->
-            <meta property="og:image" content="http://rizo-olvera.com/img/rizo_olvera_share.jpg" />
+            <meta property="og:image" content="" />
         <!-- END FB META TAGS -->
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
