Small changes in styling boilerplate

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="es">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -45,7 +45,7 @@
         <!-- Add your site or application content here -->
         <div id="mbrtWrap">
             <div class="innerWrap">
-                <header>
+                <header id="dropdownMenu">
                     <li class="mbrtBttns"><a href="#" alt="Home" title="Home">Home</a></li>
                     <li class="mbrtBttns"><a href="#" alt="Work" title="Work">Work</a></li>
                     <li class="mbrtBttns"><a href="#" alt="Services" title="Services">Services</a></li>
