Social media footer done. Header layout done, working on styling. Working on Home Section

--- a/index.html
+++ b/index.html
@@ -45,30 +45,50 @@
         <!-- Add your site or application content here -->
         <div id="mbrtWrap">
             <div class="innerWrap">
-                <header id="dropdownMenu">
-                    <li class="mbrtBttns"><a href="#" alt="Home" title="Home">Home</a></li>
-                    <li class="mbrtBttns"><a href="#" alt="Work" title="Work">Work</a></li>
-                    <li class="mbrtBttns"><a href="#" alt="Services" title="Services">Services</a></li>
-                    <li class="mbrtBttns"><a href="#" alt="About" title="About">About</a></li>
-                    <li class="mbrtBttns"><a href="#" alt="Contact" title="Contact">Contact</a></li>
+                <header id="mainHead">
+                    <div class="logoHome">
+                        <a href="#">
+                            <img src="img/graciela_holguin.png" alt="Graciela Holguín Joyería" title="Graciela Holguín Joyería">
+                        </a>
+                    </div>
+
+                    <ul id="dropdownMenu">
+                        <li class="mbrtBttns">
+                            <a class="mbrtLinks" href="#" alt="Lookbook" title="Lookbook">
+                                <span>Lookbook</span>
+                                <span class="dropdownTriangle"></span>
+                            </a>
+                        </li>
+
+
+                        <li class="mbrtBttns">
+                            <a class="mbrtLinks" href="#" alt="Shop" title="Shop">
+                                <span>Shop</span>
+                                <span class="dropdownTriangle"></span>
+                            </a>
+                        </li>
+
+
+                        <li class="mbrtBttns"><a class="mbrtLinks" href="#" alt="About" title="About">About</a></li>
+
+
+                        <li class="mbrtBttns"><a class="mbrtLinks" href="#" alt="Contact" title="Contact">Contact</a></li>
+                    </ul>
                 </header>
 
 
-                <section>
-                    <h1>Hello friend.</h1>
-                    <h2>This is Mandelbrot Boilerplate</h2>
+                <section id="homeLeftImages">
+                    <div class="bigImgContainer">
+                        <!-- <img src="http://placehold.it/736x736" alt="Big Image"> -->
+                    </div>
 
-                    <p>Esto es un template para realizar desarrollos sencillos basado en el boilerplate de HTML5 y estructurado como una aplicación para el uso de preprocesadores como SASS (dividido en app y dist). </p>
-
-                    <p>Si quieres colaborar o sólo necesitas más información envíame un mail a <a href="mailto:andrew@mandelbrot.mx" alt="Andrew's mail" title="Andrew's mail">andrew@mandelbrot.mx</a></p>
+                    <div class="filterWhite"></div>
                 </section>
 
 
                 <footer>
-                    <li class="mbrtBttns"><a href="#" alt="Facebook" title="Facebook">fb</a></li>
-                    <li class="mbrtBttns"><a href="#" alt="Instagram" title="Instagram">ig</a></li>
-                    <li class="mbrtBttns"><a href="#" alt="Behance" title="Behance">be</a></li>
-                    <li class="mbrtBttns"><a href="#" alt="Snapchat" title="Snapchat">sc</a></li>
+                    <li class="mbrtBttns firstBttn"><a href="https://www.facebook.com/grajoyeria/" target="_blank" alt="Facebook" title="Facebook"><img src="img/rrss-fb.png" alt="Facebook"></a></li>
+                    <li class="mbrtBttns secondBttn"><a href="https://www.instagram.com/grajoyeria/" target="_blank" alt="Instagram" title="Instagram"><img src="img/rrss-ig.png" alt="Instagram"></a></li>
                 </footer>
             </div>
         </div>
