--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/styling.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body>
+    <body class="no-js">
         <!-- PLACE_HERE_YOUR_FBASYNCINIT()_FUNCTION_FOR_THE_APP -->
 
         <!--[if lt IE 8]>
@@ -45,38 +44,85 @@
         <!-- Add your site or application content here -->
         <div id="mbrtWrap">
             <div class="innerWrap">
-                <header id="mainHead">
-                    <div class="logoHome">
-                        <a href="#">
-                            <img src="img/graciela_holguin.png" alt="Graciela Holguín Joyería" title="Graciela Holguín Joyería">
-                        </a>
-                    </div>
 
-                    <ul id="dropdownMenu">
-                        <li class="mbrtBttns">
-                            <a class="mbrtLinks" href="#" alt="Lookbook" title="Lookbook">
-                                <span>Lookbook</span>
-                                <span class="dropdownTriangle"></span>
+                <!-- Dropdown Navigator -->
+                <nav id="main_nav">
+                    <ul id="dropdown_menu">
+                        <li>
+                            <a href="#">
+                                <img src="img/graciela_holguin.png" alt="Graciela Holguín Joyería" title="Graciela Holguín Joyería">
                             </a>
                         </li>
 
-
-                        <li class="mbrtBttns">
-                            <a class="mbrtLinks" href="#" alt="Shop" title="Shop">
-                                <span>Shop</span>
-                                <span class="dropdownTriangle"></span>
+                    
+                        <li>
+                            <a href="#" alt="Nav Link 1" title="Nav Link 1">
+                                <h3>Nav Link 1</h3>
+                                <span class="dropdown_arrow"></span>
                             </a>
+
+                            <ul>
+                                <li>
+                                    <a href="#" title="Sub Nav Link 1">
+                                        <h4>Type of Collection 1</h4>
+                                        <h5>Name of Collection 1</h5>
+                                    </a>
+                                </li>
+                                <li class="last">
+                                    <a href="#" title="Sub Nav Link 2">
+                                        <h4>Type of Collection 2</h4>
+                                        <h5>Name of Collection 2</h5>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
 
 
-                        <li class="mbrtBttns"><a class="mbrtLinks" href="#" alt="About" title="About">About</a></li>
+                        <li>
+                            <a href="#" alt="Nav Link 2" title="Nav Link 2">
+                                <h3>Nav Link 2</h3>
+                                <span class="dropdown_arrow"></span>
+                            </a>
 
+                            <ul>
+                                <li>
+                                    <a href="#" title="Sub Nav Link 1">
+                                        <h5>Name of Product 1</h5>
+                                    </a>
+                                </li>
 
-                        <li class="mbrtBttns"><a class="mbrtLinks" href="#" alt="Contact" title="Contact">Contact</a></li>
+                                <li>
+                                    <a href="#" title="Sub Nav Link 2">
+                                        <h5>Name of Product 2</h5>
+                                    </a>
+                                </li>
+
+                                <li class="last">
+                                    <a href="#" title="Sub Nav Link 3">
+                                        <h5>Name of Product 3</h5>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a href="#" title="Nav Link 3">
+                                <h3>Nav Link 3</h3>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" title="Nav Link 4">
+                                <h3>Nav Link 4</h3>
+                            </a>
+                        </li>
+    
                     </ul>
-                </header>
+                </nav>
 
 
+                <!-- Body & Sections Content -->
                 <section id="homeLeftImages">
                     <div class="bigImgContainer">
                         <!-- <img src="http://placehold.it/736x736" alt="Big Image"> -->
@@ -93,8 +139,9 @@
             </div>
         </div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
