Dropdown style done, correcting class name pending

--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
         <link rel="stylesheet" href="css/styling.css">
     </head>
     <body class="no-js">
-        <!-- PLACE_HERE_YOUR_FBASYNCINIT()_FUNCTION_FOR_THE_APP -->
+        <script>
+            // var el = document.getElementsByTagName("body")[0];
+            // el.className = "";
+        </script>
+
 
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
+
         <div id="mbrtWrap">
             <div class="innerWrap">
 
