Dropdown menu done. Working on Product Carousel

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </head>
     <body class="no-js">
         <script>
-            // var el = document.getElementsByTagName("body")[0];
-            // el.className = "";
+            var el = document.getElementsByTagName("body")[0];
+            el.className = "";
         </script>
 
 
@@ -58,22 +58,22 @@
                 <nav id="main_nav">
                     <ul id="dropdown_menu" class="main_ul">
                         <li class="main_nav_link">
-                            <a href="#" alt="Nav Link 1" title="Nav Link 1">
-                                <h3>Nav Link 1</h3>
+                            <a href="#" title="Lookbook">
+                                <h3>Lookbook</h3>
                                 <span class="dropdown_arrow"></span>
                             </a>
 
                             <ul class="sub_ul">
                                 <li class="sub_nav_link">
-                                    <a href="#" title="Sub Nav Link 1">
-                                        <h4>Type of Collection 1</h4>
-                                        <h5>Name of Collection 1</h5>
+                                    <a href="#" title="Tempo 1">
+                                        <h4>Tempo 1</h4>
+                                        <h5>Seasons</h5>
                                     </a>
                                 </li>
                                 <li class="sub_nav_link last">
-                                    <a href="#" title="Sub Nav Link 2">
-                                        <h4>Type of Collection 2</h4>
-                                        <h5>Name of Collection 2</h5>
+                                    <a href="#" title="Tempo 2">
+                                        <h4>Tempo 2</h4>
+                                        <h5>Dulce Noche</h5>
                                     </a>
                                 </li>
                             </ul>
@@ -81,27 +81,27 @@
 
 
                         <li class="main_nav_link">
-                            <a href="#" alt="Nav Link 2" title="Nav Link 2">
-                                <h3>Nav Link 2</h3>
+                            <a href="#"title="Shop">
+                                <h3>Shop</h3>
                                 <span class="dropdown_arrow"></span>
                             </a>
 
                             <ul class="sub_ul">
                                 <li class="sub_nav_link">
-                                    <a href="#" title="Sub Nav Link 1">
-                                        <h6>Name of Product 1</h6>
+                                    <a href="#" title="Chokers" >
+                                        <h6>Chokers</h6>
                                     </a>
                                 </li>
 
                                 <li class="sub_nav_link">
-                                    <a href="#" title="Sub Nav Link 2">
-                                        <h6>Name of Product 2</h6>
+                                    <a href="#" title="Brazaletes" >
+                                        <h6>Brazaletes</h6>
                                     </a>
                                 </li>
 
                                 <li class="sub_nav_link last">
-                                    <a href="#" title="Sub Nav Link 3">
-                                        <h6>Name of Product 3</h6>
+                                    <a href="#" title="Anillos" >
+                                        <h6>Anillos</h6>
                                     </a>
                                 </li>
 
@@ -109,14 +109,14 @@
                         </li>
 
                         <li class="main_nav_link">
-                            <a href="#" title="Nav Link 3">
-                                <h3>Nav Link 3</h3>
+                            <a href="#" title="About">
+                                <h3>About</h3>
                             </a>
                         </li>
 
                         <li class="main_nav_link">
-                            <a href="#" title="Nav Link 4">
-                                <h3>Nav Link 4</h3>
+                            <a href="#" title="Contact">
+                                <h3>Contact</h3>
                             </a>
                         </li>
 
@@ -126,18 +126,86 @@
 
 
             <!-- Body & Sections Content -->
-            <section id="homeLeftImages">
-                <div class="bigImgContainer">
-                    <!-- <img src="http://placehold.it/736x736" alt="Big Image"> -->
+
+            <!-- <section class="home_left_images">
+                <div class="big_img_container">
+                    <img src="http://placehold.it/736x736" alt="Big Image">
                 </div>
 
-                <div class="filterWhite"></div>
+                <div class="filter_white"></div>
+            </section> -->
+
+            <section id="product_carousel">
+                <nav class="arrow_container left_arrow_nav">
+                    <a href="#" class="carousel_arrows left_carousel_arrow gray_arrow"></a>
+                </nav>
+
+                <div class="carousel_container">
+                    <h1 class="product_type">Chokers</h1>
+                    <div class="carousel_simple">
+                        <div class="inner_slider">
+                            <div class="product_card single_product_1 first_product">
+                                <div class="img_container"><img src="" alt="Product-1" title="Product-1"></div>
+
+                                <div class="info_container">
+                                    <h2 class="product_name" title="Product-1">Lorem Choker</h2>
+                                    <h3 class="product_price" title="Price-1">$0.00</h3>
+                                </div>
+                            </div>
+
+
+                            <div class="product_card single_product_2">
+                                <div class="img_container"><img src="" alt="Product-2" title="Product-2"></div>
+
+                                <div class="info_container">
+                                    <h2 class="product_name" title="Product-2">Lorem Choker</h2>
+                                    <h3 class="product_price" title="Price-2">$0.00</h3>
+                                </div>
+                            </div>
+
+
+                            <div class="product_card single_product_3">
+                                <div class="img_container"><img src="" alt="Product-3" title="Product-3"></div>
+
+                                <div class="info_container">
+                                    <h2 class="product_name" title="Product-3">Lorem Choker</h2>
+                                    <h3 class="product_price" title="Price-3">$0.00</h3>
+                                </div>
+                            </div>
+
+
+                            <div class="product_card single_product_4">
+                                <div class="img_container"><img src="" alt="Product-4" title="Product-4"></div>
+
+                                <div class="info_container">
+                                    <h2 class="product_name" title="Product-4">Lorem Choker</h2>
+                                    <h3 class="product_price" title="Price-4">$0.00</h3>
+                                </div>
+                            </div>
+
+
+                            <div class="product_card single_product_5">
+                                <div class="img_container"><img src="" alt="Product-5" title="Product-5"></div>
+
+                                <div class="info_container">
+                                    <h2 class="product_name" title="Product-5">Lorem Choker</h2>
+                                    <h3 class="product_price" title="Price-5">$0.00</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <nav class="arrow_container right_arrow_nav">
+                    <a href="#" class="carousel_arrows right_carousel_arrow gray_arrow"></a>
+                </nav>
+                
             </section>
 
 
             <footer>
-                <li class="firstBttn"><a href="https://www.facebook.com/grajoyeria/" target="_blank" alt="Facebook" title="Facebook"><img src="img/rrss-fb.png" alt="Facebook"></a></li>
-                <li class="secondBttn"><a href="https://www.instagram.com/grajoyeria/" target="_blank" alt="Instagram" title="Instagram"><img src="img/rrss-ig.png" alt="Instagram"></a></li>
+                <li class="firstBttn"><a href="https://www.facebook.com/grajoyeria/" target="_blank" title="Facebook"><img src="img/rrss-fb.png" alt="Facebook"></a></li>
+                <li class="secondBttn"><a href="https://www.instagram.com/grajoyeria/" target="_blank" title="Instagram"><img src="img/rrss-ig.png" alt="Instagram"></a></li>
             </footer>
         </div>
         
