Still working on Product Carousel

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                     <h1 class="product_type">Chokers</h1>
                     <div class="carousel_simple">
                         <div class="inner_slider">
-                            <div class="product_card single_product_1 first_product">
-                                <div class="img_container"><img src="" alt="Product-1" title="Product-1"></div>
+                            <div class="product_card single_product_1">
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-1" title="Product-1"></div>
 
                                 <div class="info_container">
                                     <h2 class="product_name" title="Product-1">Lorem Choker</h2>
@@ -155,7 +155,7 @@
 
 
                             <div class="product_card single_product_2">
-                                <div class="img_container"><img src="" alt="Product-2" title="Product-2"></div>
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-2" title="Product-2"></div>
 
                                 <div class="info_container">
                                     <h2 class="product_name" title="Product-2">Lorem Choker</h2>
@@ -165,7 +165,7 @@
 
 
                             <div class="product_card single_product_3">
-                                <div class="img_container"><img src="" alt="Product-3" title="Product-3"></div>
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-3" title="Product-3"></div>
 
                                 <div class="info_container">
                                     <h2 class="product_name" title="Product-3">Lorem Choker</h2>
@@ -175,7 +175,7 @@
 
 
                             <div class="product_card single_product_4">
-                                <div class="img_container"><img src="" alt="Product-4" title="Product-4"></div>
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-4" title="Product-4"></div>
 
                                 <div class="info_container">
                                     <h2 class="product_name" title="Product-4">Lorem Choker</h2>
@@ -185,11 +185,21 @@
 
 
                             <div class="product_card single_product_5">
-                                <div class="img_container"><img src="" alt="Product-5" title="Product-5"></div>
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-5" title="Product-5"></div>
 
                                 <div class="info_container">
                                     <h2 class="product_name" title="Product-5">Lorem Choker</h2>
                                     <h3 class="product_price" title="Price-5">$0.00</h3>
+                                </div>
+                            </div>
+
+
+                            <div class="product_card single_product_6">
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-6" title="Product-6"></div>
+
+                                <div class="info_container">
+                                    <h2 class="product_name" title="Product-6">Lorem Choker</h2>
+                                    <h3 class="product_price" title="Price-6">$0.00</h3>
                                 </div>
                             </div>
                         </div>
@@ -199,6 +209,8 @@
                 <nav class="arrow_container right_arrow_nav">
                     <a href="#" class="carousel_arrows right_carousel_arrow gray_arrow"></a>
                 </nav>
+
+                <div class="return_to_collection"></div>
                 
             </section>
 
