Js product carousel interaction done. Css and Js template files ready

--- a/index.html
+++ b/index.html
@@ -137,69 +137,68 @@
 
             <section id="product_carousel">
                 <nav class="arrow_container left_arrow_nav">
-                    <a href="#" class="carousel_arrows left_carousel_arrow gray_arrow"></a>
+                    <a href="#" class="carousel_arrows left_carousel_arrow gray_arrow" data-slide="prev"></a>
                 </nav>
 
                 <div class="carousel_container">
                     <h1 class="product_type">Chokers</h1>
                     <div class="carousel_simple">
                         <div class="inner_slider">
-                            <div class="product_card single_product_1">
+                            <div class="product_card">
                                 <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-1" title="Product-1"></div>
 
                                 <div class="info_container">
                                     <h2 class="product_name" title="Product-1">Lorem Choker</h2>
-                                    <h3 class="product_price" title="Price-1">$0.00</h3>
-                                </div>
-                            </div>
-
-
-                            <div class="product_card single_product_2">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-2" title="Product-2"></div>
-
-                                <div class="info_container">
-                                    <h2 class="product_name" title="Product-2">Lorem Choker</h2>
                                     <h3 class="product_price" title="Price-2">$0.00</h3>
                                 </div>
                             </div>
 
 
-                            <div class="product_card single_product_3">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-3" title="Product-3"></div>
+                            <div class="product_card">
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-2" title="Product-2"></div>
 
                                 <div class="info_container">
-                                    <h2 class="product_name" title="Product-3">Lorem Choker</h2>
+                                    <h2 class="product_name" title="Product-2">Lorem Choker</h2>
                                     <h3 class="product_price" title="Price-3">$0.00</h3>
                                 </div>
                             </div>
 
 
-                            <div class="product_card single_product_4">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-4" title="Product-4"></div>
+                            <div class="product_card">
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-3" title="Product-3"></div>
 
                                 <div class="info_container">
-                                    <h2 class="product_name" title="Product-4">Lorem Choker</h2>
+                                    <h2 class="product_name" title="Product-3">Lorem Choker</h2>
                                     <h3 class="product_price" title="Price-4">$0.00</h3>
                                 </div>
                             </div>
 
 
-                            <div class="product_card single_product_5">
-                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-5" title="Product-5"></div>
+                            <div class="product_card">
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-4" title="Product-4"></div>
 
                                 <div class="info_container">
-                                    <h2 class="product_name" title="Product-5">Lorem Choker</h2>
+                                    <h2 class="product_name" title="Product-4">Lorem Choker</h2>
                                     <h3 class="product_price" title="Price-5">$0.00</h3>
                                 </div>
                             </div>
 
 
-                            <div class="product_card single_product_6">
+                            <div class="product_card">
+                                <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-5" title="Product-5"></div>
+
+                                <div class="info_container">
+                                    <h2 class="product_name" title="Product-5">Lorem Choker</h2>
+                                    <h3 class="product_price" title="Price-6">$0.00</h3>
+                                </div>
+                            </div>
+
+                            <div class="product_card">
                                 <div class="img_container"><img src="http://placehold.it/165x210" alt="Product-6" title="Product-6"></div>
 
                                 <div class="info_container">
                                     <h2 class="product_name" title="Product-6">Lorem Choker</h2>
-                                    <h3 class="product_price" title="Price-6">$0.00</h3>
+                                    <h3 class="product_price" title="Price-1">$0.00</h3>
                                 </div>
                             </div>
                         </div>
@@ -207,7 +206,7 @@
                 </div>
 
                 <nav class="arrow_container right_arrow_nav">
-                    <a href="#" class="carousel_arrows right_carousel_arrow gray_arrow"></a>
+                    <a href="#" class="carousel_arrows right_carousel_arrow gray_arrow" data-slide="next"></a>
                 </nav>
 
                 <div class="return_to_collection"></div>
