Index product carousel done. Lightbox of each product pending

--- a/index.html
+++ b/index.html
@@ -209,7 +209,20 @@
                     <a href="#" class="carousel_arrows right_carousel_arrow gray_arrow" data-slide="next"></a>
                 </nav>
 
-                <div class="return_to_collection"></div>
+                <a href="#" class="return_to_collection">
+                    <div class="return_arrow">
+                        <div class="draw_arrow"></div>
+                    </div>
+
+                    <div class="return_data">
+                        <div class="collection_type">
+                            <h4>Tempo 1</h4>
+                        </div>
+                        <div class="collection_name">
+                            <h5>Seasons</h5>
+                        </div>
+                    </div>
+                </a>
                 
             </section>
 
